--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,19 +8,10 @@
       "name": "password-enum: error",
       "type": "python",
       "request": "launch",
-      "program": "./password-enum.py",
+      "program": "./field-enum.py",
       "console": "integratedTerminal",
       "justMyCode": true,
       "args": ["users", "username", "administrator", "password", "--ssl"]
-    },
-    {
-      "name": "password-enum: conditional ui",
-      "type": "python",
-      "request": "launch",
-      "program": "./password-enum.py",
-      "console": "integratedTerminal",
-      "justMyCode": true,
-      "args": ["users", "username", "administrator", "password", "--ssl", "--success=Welcome back"]
     }
   ]
 }
